--- a/DA-ESS-CbResponse/default/data/ui/views/network-map.xml
+++ b/DA-ESS-CbResponse/default/data/ui/views/network-map.xml
@@ -4,7 +4,7 @@
     <input type="time" token="field1">
       <label></label>
       <default>
-        <earliest>-24h@h<</earliest>
+        <earliest>-24h@h</earliest>
         <latest></latest>
       </default>
     </input>
