--- a/CbResponse/appserver/static/styles/setup_page.css
+++ b/CbResponse/appserver/static/styles/setup_page.css
@@ -68,3 +68,30 @@
     /* Styling for each line of the errors */
     color: rgba(255, 0, 0, 1);
 }
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 3px solid black;
+}
+
+thead th:nth-child(1) {
+  width: 30%;
+}
+
+thead th:nth-child(2) {
+  width: 20%;
+}
+
+thead th:nth-child(3) {
+  width: 15%;
+}
+
+thead th:nth-child(4) {
+  width: 35%;
+}
+
+th, td {
+  padding: 20px;
+}
