--- a/DA-ESS-CbResponse/appserver/static/styles/setup_page.css
+++ b/DA-ESS-CbResponse/appserver/static/styles/setup_page.css
@@ -1,4 +1,3 @@
-@import "w3.css" w3-table-all;
 .setup.container {
     display: flex;
     flex-direction: row;
@@ -66,29 +65,70 @@
     color: rgba(255, 0, 0, 1);
 }
 
-/*
 table {
-  table-layout: fixed;
+  border: 1px solid #ccc;
   border-collapse: collapse;
-  border: 3px solid black;
+  margin: 0;
+  padding: 0;
 }
-
-thead th:nth-child(1) {
-  width: 30%;
+table caption {
+  font-size: 1.5em;
+  margin: .5em 0 .75em;
 }
-
-thead th:nth-child(2) {
-  width: 20%;
+table tr {
+  background: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: .35em;
 }
-
-thead th:nth-child(3) {
-  width: 15%;
+table th,
+table td {
+  padding: .625em;
+  text-align: center;
 }
-
-thead th:nth-child(4) {
-  width: 35%;
+table th {
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
 }
-
-th, td {
-  padding: 10px;
-}*/
+@media screen and (max-width: 600px) {
+  table {
+    border: 0;
+  }
+  table caption {
+    font-size: 1.3em;
+  }
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: .625em;
+  }
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+  }
+  table td:before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  table td:last-child {
+    border-bottom: 0;
+  }
+}
